# SIS

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  SELFMOD.md  SPEC.md  cabal.project  dgm.cabal
app/: Demo.hs  Main.hs
scripts/: demo.sh  dgm-evolve.sh
src/: DGM.hs
src/DGM/: AST.hs  AbsoluteZero.hs  AgentOracle.hs  Archive.hs  Cycle.hs  Evolution.hs  HintBridge.hs  HsAST.hs  Liquid.hs  ModGraph.hs  NatLang.hs  Oracle.hs  OracleContext.hs  OracleHandle.hs  Reversal.hs  Rewriting.hs  RuleMiner.hs  SafetyKernel.hs  Sandbox.hs  SelfCompile.hs  SelfMod.hs  SemanticContext.hs  Types.hs  Verification.hs
test/: Spec.hs
